--- a/RedisDemo/pom.xml
+++ b/RedisDemo/pom.xml
@@ -18,11 +18,11 @@
     </properties>
 
     <dependencies>
+        <!-- Redis -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
         </dependency>
     </dependencies>
 </project>
