--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <module>CommonDemo</module>
     <module>HBaseDemo</module>
     <module>RedisDemo</module>
+      <module>ZookeeperDemo</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -22,7 +23,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.3.3.RELEASE</version>
+    <version>1.5.4.RELEASE</version>
   </parent>
 
   <dependencies>
@@ -34,7 +35,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
