添加 undertow 简单代码

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <module>HBaseDemo</module>
     <module>RedisDemo</module>
     <module>ZookeeperDemo</module>
+    <module>UndertowDemo</module>
   </modules>
   <packaging>pom</packaging>
 
